--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "libreoffice-convert": "^1.6.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "xlsx": "^0.18.5",
+    "pdf2pic": "^2.1.4",
+    "jspdf": "^2.5.1",
+    "pdf-merger-js": "^4.3.0",
+    "archiver": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
